chore: ignore esbuild until serverless-esbuild supports esbuild@>0.17.x

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": ["config:base", "schedule:monthly"],
   "baseBranches": ["main"],
   "rangeStrategy": "pin",
+  "ignoreDeps": ["esbuild"],
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin"],
