--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.1.0",
     "@semantic-release/release-notes-generator": "10.0.3",
-    "@serverless/typescript": "^3.29.0",
-    "@types/aws-lambda": "^8.10.114",
+    "@serverless/typescript": "3.30.1",
+    "@types/aws-lambda": "8.10.119",
     "@types/jest": "29.5.3",
     "@types/node": "18.16.19",
-    "esbuild": "0.18.12",
+    "esbuild": "0.17.19",
     "husky": "8.0.3",
     "jest": "29.6.1",
     "json-schema-to-ts": "2.9.1",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
     "semantic-release": "21.0.7",
-    "serverless": "^3.33.0",
-    "serverless-esbuild": "^1.46.0",
+    "serverless": "3.33.0",
+    "serverless-esbuild": "1.46.0",
     "serverless-offline": "12.0.4",
     "ts-jest": "29.1.1",
-    "ts-node": "^10.4.0",
+    "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
     "type-fest": "3.13.0",
     "typescript": "5.1.6"
