--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,9 @@ jobs:
 
   unit-tests:
     docker:
-      - image: cimg/base:2023.03
+      - image: cimg/node:lts
     steps:
+      - checkout
       - run:
           name: Install dependencies
           command: npm ci
