--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "husky": "8.0.3",
     "jest": "29.6.1",
     "json-schema-to-ts": "2.9.1",
+    "lint-staged": "13.2.3",
     "prettier": "2.8.8",
-    "pretty-quick": "3.1.3",
     "semantic-release": "21.0.7",
     "serverless": "3.33.0",
     "serverless-esbuild": "1.46.0",
@@ -73,5 +73,8 @@
       ],
       "@semantic-release/github"
     ]
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
