--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,14 @@
 version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@4.1.1
+executors:
+  node:
+    docker:
+      - image: cimg/node:lts
 
 jobs:
   build-and-deploy: &build-and-deploy
-    executor: aws-cli/default
+    executor: node
     steps:
       - checkout
       - aws-cli/install
