--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "serverless offline --stage dev",
     "test": "jest --coverage",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "engines": {
     "node": ">=18"
@@ -26,7 +26,7 @@
     "@types/aws-lambda": "8.10.133",
     "@types/jest": "29.5.11",
     "@types/node": "20.11.15",
-    "esbuild": "0.20.0",
+    "esbuild": "0.19.12",
     "husky": "9.0.9",
     "jest": "29.7.0",
     "json-schema-to-ts": "3.0.0",
